--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1,4 +1,5 @@
 {
+  "++ZVe/": "Testing",
   "+0yxlR": "Function display",
   "+20fdv": "Invalid properties '{0}' for authentication type '{1}'.",
   "+3efoo": "No schema is added",
@@ -285,6 +286,7 @@
   "DZc8wP": "Custom value does not match the schema node's type",
   "DfS13/": "(UTC-10:00) Aleutian Islands",
   "Dhu3IS": "Show mini-map",
+  "DkF25I": "Expand Static Result",
   "DsPDVB": "Trigger condition cannot be empty",
   "DuXV2M": "(UTC-01:00) Azores",
   "DyYcJZ": "Run After",
@@ -672,6 +674,7 @@
   "ZM1mRy": "Concurrency Control",
   "ZME5hh": "Returns the day of month component of a string timestamp",
   "ZQ4lji": "(UTC+10:00) Canberra, Melbourne, Sydney",
+  "ZRdkFN": "Collapse Static Result",
   "ZUaz3Y": "Shorthand for trigger().outputs.body",
   "ZaIeDG": "Required. The value the string may start with.",
   "ZbCS4a": "Read more",
@@ -680,6 +683,7 @@
   "ZkjTbp": "Learn more about dynamic content.",
   "ZnGRMP": "(UTC+07:00) Tomsk",
   "Zr0yTE": "Unsupported 'in' value : '{value}' in Parameter",
+  "_++ZVe/.comment": "Title for testing section",
   "_+0yxlR.comment": "Label for the function display radio group",
   "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
   "_+3efoo.comment": "Placeholder when no schema has been added",
@@ -966,6 +970,7 @@
   "_DZc8wP.comment": "Error message for when custom value does not match schema node type",
   "_DfS13/.comment": "Timezone value ",
   "_Dhu3IS.comment": "Label to show the mini-map",
+  "_DkF25I.comment": "An accessible label for expand toggle icon",
   "_DsPDVB.comment": "error message for empty trigger condition",
   "_DuXV2M.comment": "Timezone value ",
   "_DyYcJZ.comment": "title for run after setting section",
@@ -1353,6 +1358,7 @@
   "_ZM1mRy.comment": "title for concurrency setting",
   "_ZME5hh.comment": "Label for description of custom dayOfMonth Function",
   "_ZQ4lji.comment": "Timezone value ",
+  "_ZRdkFN.comment": "An accessible label for collapse toggle icon",
   "_ZUaz3Y.comment": "Label for description of custom triggerBody Function",
   "_ZaIeDG.comment": "Required text parameter to search startsWith function with",
   "_ZbCS4a.comment": "Text for read more button",
@@ -1539,6 +1545,7 @@
   "_k1N9Si.comment": "Error message when the workflow parameter value is empty.",
   "_k41+13.comment": "This is a status message to be shown in a monitoring view",
   "_k5tGEr.comment": "This is the boolean value for Yes",
+  "_kBOAkT.comment": "Label to select Fields",
   "_kDsud+.comment": "Timezone value ",
   "_kEI2xx.comment": "The title of the message field in the static result parseJson action",
   "_kHcCxH.comment": "This is a time duration in abbreviated format",
@@ -2004,6 +2011,7 @@
   "k1N9Si": "Must provide default value for parameter.",
   "k41+13": "Skipped",
   "k5tGEr": "Yes",
+  "kBOAkT": "Select Fields",
   "kDsud+": "(UTC-03:00) Cayenne, Fortaleza",
   "kEI2xx": "Message",
   "kHcCxH": "{minutes}m {seconds}s",
