--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -39,6 +39,7 @@
   "09oqLb": "(UTC+04:00) Baku",
   "0CvRZW": "Save",
   "0FzNJV": "Required. The base64 encoded string.",
+  "0GT0SI": "Cancel",
   "0GqNGo": "Url decodes the input string",
   "0IRUjM": "Select a target schema node to start mapping",
   "0JTHTZ": "Show run menu",
@@ -102,6 +103,7 @@
   "2ri1Kf": "(UTC+02:00) Damascus",
   "2tTQ0A": "On",
   "2xhbE1": "(UTC+11:00) Magadan",
+  "2y24a/": "Save",
   "33+WHG": "Identifier",
   "36RiST": "System-assigned managed identity",
   "3AWwVl": "Code",
@@ -205,6 +207,7 @@
   "8UfIAk": "Enter secret as plain text or use a secure parameter",
   "8Y5xpK": "Thursday",
   "8baaNC": "Unsupported Token Type: {expressions}",
+  "8eTWaf": "Rename",
   "8j+a0n": "With the asynchronous pattern, if the remote server indicates that the request is accepted for processing with a 202 (Accepted) response, the Logic Apps engine will keep polling the URL specified in the response's location header until reaching a terminal state.",
   "8pPivj": "(UTC+11:00) Norfolk Island",
   "8ubEPi": "Request Options",
@@ -281,6 +284,7 @@
   "D5FIKL": "Paste from sample",
   "DDIIAQ": "Node",
   "DGMwU4": "Use sample payload to generate schema",
+  "DJW8RE": "Select a value",
   "DWsh56": "Enter client ID",
   "DZZ3fj": "Duration",
   "DZc8wP": "Custom value does not match the schema node's type",
@@ -455,6 +459,7 @@
   "N2CF0J": "Required. The key name of the form data values to return.",
   "N4dEVo": "Headers",
   "NPUFgH": "Status",
+  "NWxGWN": "Enter unique property name",
   "NeyUAh": "(UTC-03:00) City of Buenos Aires",
   "NkUgXU": "(UTC+03:00) Minsk",
   "NnD8gF": "Invalid operation path input value. Path value - {pathValue} Path template - {pathTemplate}",
@@ -680,6 +685,7 @@
   "ZbCS4a": "Read more",
   "ZbX8xq": "This operation has already been deleted.",
   "Zg3IjD": "Close",
+  "Zi9gQK": "Add new item",
   "ZkjTbp": "Learn more about dynamic content.",
   "ZnGRMP": "(UTC+07:00) Tomsk",
   "Zr0yTE": "Unsupported 'in' value : '{value}' in Parameter",
@@ -723,6 +729,7 @@
   "_09oqLb.comment": "Timezone value ",
   "_0CvRZW.comment": "Save",
   "_0FzNJV.comment": "Required base64 string parameter to be converted to binary using base64ToBinary function",
+  "_0GT0SI.comment": "Cancel button label",
   "_0GqNGo.comment": "Label for description of custom decodeUriComponent Function",
   "_0IRUjM.comment": "Breadcrumb message shown in overview",
   "_0JTHTZ.comment": "Button text to show run menu",
@@ -786,6 +793,7 @@
   "_2ri1Kf.comment": "Timezone value ",
   "_2tTQ0A.comment": "label when setting is on",
   "_2xhbE1.comment": "Timezone value ",
+  "_2y24a/.comment": "Save button label",
   "_33+WHG.comment": "Column header text for identifier",
   "_36RiST.comment": "System-assigned managed identity dropdown option text",
   "_3AWwVl.comment": "The title of the code property in the static result schema",
@@ -889,6 +897,7 @@
   "_8UfIAk.comment": "Secret Placeholder Text",
   "_8Y5xpK.comment": "Day of the week",
   "_8baaNC.comment": "Exception for unsupported token types",
+  "_8eTWaf.comment": "Rename label",
   "_8j+a0n.comment": "description of asynchronous pattern setting",
   "_8pPivj.comment": "Timezone value ",
   "_8ubEPi.comment": "title for request options setting",
@@ -965,6 +974,7 @@
   "_D5FIKL.comment": "Paste from sample",
   "_DDIIAQ.comment": "Title for other node",
   "_DGMwU4.comment": "Button Label for allowing users to generate from schema",
+  "_DJW8RE.comment": "Placeholder for dropdown",
   "_DWsh56.comment": "Client ID Placeholder Text",
   "_DZZ3fj.comment": "Column header text for duration",
   "_DZc8wP.comment": "Error message for when custom value does not match schema node type",
@@ -1139,6 +1149,7 @@
   "_N2CF0J.comment": "Required string parameter to be used as key for triggerFormDataMultiValues function",
   "_N4dEVo.comment": "Display name for headers in outputs",
   "_NPUFgH.comment": "Label text for retry status",
+  "_NWxGWN.comment": "Placeholder text for new property name",
   "_NeyUAh.comment": "Timezone value ",
   "_NkUgXU.comment": "Timezone value ",
   "_NnD8gF.comment": "Error message while parsing ",
@@ -1364,6 +1375,7 @@
   "_ZbCS4a.comment": "Text for read more button",
   "_ZbX8xq.comment": "Text to tell users why delete is disabled",
   "_Zg3IjD.comment": "Close token picker",
+  "_Zi9gQK.comment": "Label to add item to property editor",
   "_ZkjTbp.comment": "Text for dynamic content link",
   "_ZnGRMP.comment": "Timezone value ",
   "_Zr0yTE.comment": "Error message",
@@ -1546,6 +1558,7 @@
   "_k41+13.comment": "This is a status message to be shown in a monitoring view",
   "_k5tGEr.comment": "This is the boolean value for Yes",
   "_kBOAkT.comment": "Label to select Fields",
+  "_kBSLfu.comment": "Duplicate property name error message",
   "_kDsud+.comment": "Timezone value ",
   "_kEI2xx.comment": "The title of the message field in the static result parseJson action",
   "_kHcCxH.comment": "This is a time duration in abbreviated format",
@@ -1668,6 +1681,7 @@
   "_qq/bq0.comment": "Timezone value ",
   "_qr1lLG.comment": "Body text for the input type mismatch card",
   "_qrxi0L.comment": "description of asynchronous response setting",
+  "_r/n6/9.comment": "Placeholder for text field",
   "_r1FQhf.comment": "Timezone value ",
   "_r43nMc.comment": "Button text for undo the last action",
   "_r7vZ5a.comment": "title for retry minimum interval setting",
@@ -2012,6 +2026,7 @@
   "k41+13": "Skipped",
   "k5tGEr": "Yes",
   "kBOAkT": "Select Fields",
+  "kBSLfu": "Duplicate property name",
   "kDsud+": "(UTC-03:00) Cayenne, Fortaleza",
   "kEI2xx": "Message",
   "kHcCxH": "{minutes}m {seconds}s",
@@ -2134,6 +2149,7 @@
   "qq/bq0": "(UTC+09:00) Yakutsk",
   "qr1lLG": "Function ''{nodeName}'' has an input with a mismatched type",
   "qrxi0L": "Asynchronous response allows a Logic App to respond with a 202 (Accepted) to indicate the request has been accepted for processing. A location header will be provided to retrieve the final state.",
+  "r/n6/9": "Enter a value",
   "r1FQhf": "(UTC+01:00) Windhoek",
   "r43nMc": "Undo",
   "r7vZ5a": "Minimum Interval",
