context menu done

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1604,6 +1604,7 @@
   "_mZCHKf.comment": "Timezone value ",
   "_mZRMD9.comment": "Required text parameter to lower case",
   "_mca3Ml.comment": "Aria label description for sign in button.",
+  "_meVkB6.comment": "Empty property name error message",
   "_mjS/k1.comment": "description of suppress woers setting",
   "_mvrlkP.comment": "OAuth Password Placeholder Text",
   "_mwEHSX.comment": "Label for function node",
@@ -2073,6 +2074,7 @@
   "mZCHKf": "(UTC+12:00) Anadyr, Petropavlovsk-Kamchatsky",
   "mZRMD9": "Required. The string to convert to lower casing. If a character in the string does not have a lowercase equivalent, the character is included unchanged in the returned string.",
   "mca3Ml": "Sign in to connector",
+  "meVkB6": "Empty property name",
   "mjS/k1": "Limit Logic Apps to not include workflow metadata headers in the outgoing request.",
   "mvrlkP": "Enter password as plain text or use a secure parameter",
   "mwEHSX": "Function",
