finishing main ux work?

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1459,6 +1459,7 @@
   "_eRvRWs.comment": "Label text for request start time",
   "_eT+b9W.comment": "Required number parameter to be divided by in div function",
   "_egLI8P.comment": "Required start index parameter required to obtain substring",
+  "_ehIBkh.comment": "Placeholder for integer text field",
   "_epOMnV.comment": "Shared category name text",
   "_esOQ5p.comment": "Label for when no values match search value",
   "_euC/DV.comment": "title for array dropdown input setting",
@@ -1636,6 +1637,7 @@
   "_oDHXKh.comment": "Display name for item output",
   "_oLtwMw.comment": "title for content transfer setting",
   "_oQjIWf.comment": "The title of the errors field in the static result parseJson action",
+  "_oR2x4N.comment": "Error message for invalid integer value",
   "_oRvVIW.comment": "Timezone value ",
   "_oTBkbU.comment": "The title of the output field in the static result query action",
   "_oV0xQ9.comment": "Placeholder text for workflow overview filter input",
@@ -1929,6 +1931,7 @@
   "eRvRWs": "Start time",
   "eT+b9W": "Required. The number to divide the Dividend by.",
   "egLI8P": "Required. The index of where the substring begins in parameter 1.",
+  "ehIBkh": "Enter an integer",
   "epOMnV": "Shared",
   "esOQ5p": "No values matching your search",
   "euC/DV": "Array",
@@ -2106,6 +2109,7 @@
   "oDHXKh": "Item",
   "oLtwMw": "Content Transfer",
   "oQjIWf": "Errors",
+  "oR2x4N": "Invalid integer value",
   "oRvVIW": "(UTC+07:00) Krasnoyarsk",
   "oTBkbU": "Output",
   "oV0xQ9": "Enter the run identifier to open the run",
