added save buttons

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -411,6 +411,7 @@
   "K7/DnZ": "Output",
   "K90YEU": "Returns a subset of characters from a string",
   "KX1poC": "{actionCount, plural, one {# Case} =0 {0 Cases} other {# Cases}}",
+  "KZOa5l": "Cancel",
   "Khc8lS": "(UTC-09:30) Marquesas Islands",
   "KlvTze": "(UTC+05:30) Sri Jayawardenepura",
   "KoBDbT": "(UTC-02:00) Coordinated Universal Time-02",
@@ -1104,6 +1105,7 @@
   "_K7/DnZ.comment": "The title of the output field in the static result parseJson action",
   "_K90YEU.comment": "Label for description of custom substring Function",
   "_KX1poC.comment": "This is the number of cases or options the program can take",
+  "_KZOa5l.comment": "Label for cancel button",
   "_Khc8lS.comment": "Timezone value ",
   "_KlvTze.comment": "Timezone value ",
   "_KoBDbT.comment": "Timezone value ",
@@ -1748,6 +1750,7 @@
   "_u9tr3k.comment": "Label for default message when no node selected",
   "_uDI1Um.comment": "The title of the status code field in the static result http action",
   "_uIQrat.comment": "Tooltip for the button to add a new step (action or branch)",
+  "_uIurld.comment": "Label for save button",
   "_uM1i27.comment": "placeholder for retry count setting",
   "_uN4zFU.comment": "OK message appearing on a alert message modal.",
   "_uR9WuI.comment": "Required collection parameters to check union function on",
@@ -2218,6 +2221,7 @@
   "u9tr3k": "Select an element to start configuring",
   "uDI1Um": "Status Code",
   "uIQrat": "Insert a new step after {parent}",
+  "uIurld": "Save",
   "uM1i27": "Specify a retry count from 1 to 90",
   "uN4zFU": "OK",
   "uR9WuI": "Required. The collections to evaluate. An object that appears in any of the collections also appears in the result.",
