Can now add and edit http+swagger operations (not load or save yet)

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -381,6 +381,7 @@
   "HzS2gJ": "Dynamic content not supported as properties in authentication.",
   "I7/+er": "Global view",
   "IA+Ogm": "22",
+  "IHMd3X": "Example: {url}",
   "IPbBB2": "(UTC+12:00) Fiji",
   "IQyOth": "If available, dynamic content is automatically generated from the connectors and actions you choose for your flow.",
   "IUE/lQ": "(UTC-01:00) Cabo Verde Is.",
@@ -1081,6 +1082,7 @@
   "_HzS2gJ.comment": "Error message for when putting token in authentication property",
   "_I7/+er.comment": "Button text for whole overview",
   "_IA+Ogm.comment": "Hour of the day",
+  "_IHMd3X.comment": "Swagger url input placeholder",
   "_IPbBB2.comment": "Timezone value ",
   "_IQyOth.comment": "Section 1 of text for including dynamic content section",
   "_IUE/lQ.comment": "Timezone value ",
@@ -1475,6 +1477,7 @@
   "_e9OvzW.comment": "Clear",
   "_eFet4K.comment": "Action Tracking ID text",
   "_eGa1Wa.comment": "Timezone value ",
+  "_eHgfpz.comment": "Swagger url input error message",
   "_eHgi14.comment": "Required string parameter to determine variable wanted",
   "_eRvRWs.comment": "Label text for request start time",
   "_eT+b9W.comment": "Required number parameter to be divided by in div function",
@@ -1699,6 +1702,7 @@
   "_qSejoi.comment": "Label for description of custom lessOrEquals Function",
   "_qSt0Sb.comment": "Accessibility prefix for the input label",
   "_qTqSqD.comment": "Dynamic call error message",
+  "_qUMXpq.comment": "Swagger endpoint input label",
   "_qUWBUX.comment": "A duration of time shown in days",
   "_qc5S69.comment": "Label for description of custom length Function",
   "_qiIs4V.comment": "placeholder for retry interval setting",
@@ -1950,6 +1954,7 @@
   "e9OvzW": "Clear",
   "eFet4K": "Action Tracking ID",
   "eGa1Wa": "(UTC+05:00) Ekaterinburg",
+  "eHgfpz": "Please enter a valid URL",
   "eHgi14": "Required. The name of the variable whose value you want.",
   "eRvRWs": "Start time",
   "eT+b9W": "Required. The number to divide the Dividend by.",
@@ -2174,6 +2179,7 @@
   "qSejoi": "Returns true if the first argument is less than or equal to the second",
   "qSt0Sb": "Required",
   "qTqSqD": "Error code: '{errorCode}', Message: '{message}'.",
+  "qUMXpq": "Swagger Endpoint",
   "qUWBUX": "{days, plural, one {# day} other {# days}}",
   "qc5S69": "Returns the number of elements in an array or string",
   "qiIs4V": "Example: {example}",
