--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -59,6 +59,7 @@
   "0qcKzG": "{parameterName} is no longer present in the operation schema. It should be removed before the workflow is re-saved.",
   "0uj1Li": "Returns a binary representation of an input data URI string",
   "0upuCv": "Hour",
+  "0vfdFS": "every day",
   "0y5eia": "More commands",
   "1+Z8n9": "Required. The data URI to convert to String representation.",
   "109OPL": "Returns the port from a URI. If port is not specified, returns the default port for the protocol",
@@ -137,6 +138,7 @@
   "47kOXr": "Required. The lowest integer that can be returned.",
   "4BH9uU": "Errors",
   "4BrA0z": "Required. The number of days to add. Can be negative to subtract days.",
+  "4D7H4R": "Runs {onDays}",
   "4Ekn9t": "Undo",
   "4IS4yp": "Retry Policy",
   "4Q7WzU": "Add a new connection",
@@ -284,6 +286,7 @@
   "ClZW2r": "Value",
   "CsPY74": "Credential Type",
   "Cy9qeQ": "(UTC+02:00) Helsinki, Kyiv, Riga, Sofia, Tallinn, Vilnius",
+  "Czt6YV": "at {times}",
   "D+Ptnq": "Returns the path and query from a URI",
   "D/xTXV": "Show source schema",
   "D1lgsT": "Required. The string from which to remove leading and trailing whitespace.",
@@ -291,6 +294,7 @@
   "DDIIAQ": "Node",
   "DGMwU4": "Use sample payload to generate schema",
   "DJW8RE": "Select a value",
+  "DWd9vy": "every week",
   "DWsh56": "Enter client ID",
   "DZZ3fj": "Duration",
   "DZc8wP": "Custom value does not match the schema node's type",
@@ -313,6 +317,7 @@
   "EV9iRu": "Failed to save.",
   "EYqGxA": "(UTC+02:00) Athens, Bucharest",
   "EZz5q7": "Required. The index of where to start extracting the substring.",
+  "Ea/fr+": "Every {interval} days",
   "EdzoIs": "1",
   "EiRMD4": "Sign in to create a connection to {connectorDisplayName}.",
   "EjXdAm": "Password",
@@ -346,6 +351,7 @@
   "GCjJnP": "Enter a valid Json.",
   "GD3m4X": "Expanded",
   "GDUGlm": "Enter authority",
+  "GEB1on": "This contains a value that is not between 0 and 59",
   "GIUSQs": "Filter by data type",
   "GLd3MU": "Required. The object to find inside the Within collection.",
   "GXXLuT": "Enter a valid boolean.",
@@ -450,6 +456,7 @@
   "M8Aqm4": "Optional. The name of the scoped action where you want the inputs and outputs from the top-level actions inside that scope.",
   "M9mzP6": "Required. The number to add to Summand 2.",
   "MCQODe": "Secure outputs of the operation and references of output properties.",
+  "MCzWDc": "Preview",
   "MDbmMw": "Required. The collections to evaluate. An object must be in all collections passed in to appear in the result.",
   "MKTdNk": "Required. The data URI to convert to binary representation.",
   "MLCQzX": "Managed identity",
@@ -509,6 +516,7 @@
   "PE1tsI": "No outputs",
   "PF87Ew": "Succeeded",
   "PKMkb/": "Required. The number to add to Summand 1.",
+  "PNk3n4": "Runs {onTime}",
   "PORNMZ": "Inputs",
   "PP63jY": "more panels",
   "PQOiAc": "Collapse",
@@ -584,6 +592,7 @@
   "TUaunO": "Enter a value",
   "TX4Kdr": "Create a new connection",
   "TY4HzZ": "Add or replace your schemas.",
+  "TZh8nV": "on {weekDays} {frequencyDesc}",
   "Tayrub": "Raw",
   "Tb2QLA": "Client request ID",
   "TgcgXE": "Tags",
@@ -597,6 +606,7 @@
   "U1NiVg": "(UTC-06:00) Central America",
   "U3guPp": "Group by Connector",
   "U3iWVd": "Generates an array of integers starting from a certain number",
+  "U4zovj": "Runs {onTime} {onDays}",
   "U56j9a": "(UTC-06:00) Easter Island",
   "U7yRwM": "Validation Error",
   "UCNM4L": "To reference a parameter, use the dynamic content list.",
@@ -607,6 +617,7 @@
   "UYRIS/": "{fileName} (file name)",
   "UZiXVh": "Output",
   "Ufv5m9": "Schema node ''{nodeName}'' has an non-terminating connection chain",
+  "Umpr3z": "Every {interval} weeks",
   "UnrrzF": "Source schema",
   "Ur+wph": "Click to delete item",
   "UtyRCH": "Enter a name for the connection",
@@ -760,6 +771,7 @@
   "_0qcKzG.comment": "Unknown Parameter error message",
   "_0uj1Li.comment": "Label for description of custom decodeDataUri Function",
   "_0upuCv.comment": "Frequency value ",
+  "_0vfdFS.comment": "Recurrence schedule description every day",
   "_0y5eia.comment": "Label for commands in panel header",
   "_1+Z8n9.comment": "Required dataUri string parameter to be converted using dataUriToString function",
   "_109OPL.comment": "Label for description of custom uriPort Function",
@@ -838,6 +850,7 @@
   "_47kOXr.comment": "Required integer parameter to be used as lower bound for rand function",
   "_4BH9uU.comment": "Error section title",
   "_4BrA0z.comment": "Required integer parameter to subtract days from time",
+  "_4D7H4R.comment": "Recurrence schedule description on days of week at times",
   "_4Ekn9t.comment": "Undo",
   "_4IS4yp.comment": "title for retry policy setting",
   "_4Q7WzU.comment": "Aria label description for add button",
@@ -985,6 +998,7 @@
   "_ClZW2r.comment": "Parameter Field Value Title",
   "_CsPY74.comment": "Authentication OAuth Type Label",
   "_Cy9qeQ.comment": "Timezone value ",
+  "_Czt6YV.comment": "Recurrence schedule description at times",
   "_D+Ptnq.comment": "Label for description of custom uriPathAndQuery Function",
   "_D/xTXV.comment": "Label to open source schema toolbox",
   "_D1lgsT.comment": "Required text parameter to apply trim function with",
@@ -992,6 +1006,7 @@
   "_DDIIAQ.comment": "Title for other node",
   "_DGMwU4.comment": "Button Label for allowing users to generate from schema",
   "_DJW8RE.comment": "Placeholder for dropdown",
+  "_DWd9vy.comment": "Recurrence schedule description every week",
   "_DWsh56.comment": "Client ID Placeholder Text",
   "_DZZ3fj.comment": "Column header text for duration",
   "_DZc8wP.comment": "Error message for when custom value does not match schema node type",
@@ -1014,6 +1029,7 @@
   "_EV9iRu.comment": "Message on failed save",
   "_EYqGxA.comment": "Timezone value ",
   "_EZz5q7.comment": "Required start index parameter to obtain substring",
+  "_Ea/fr+.comment": "Recurrence schedule description every interval days",
   "_EdzoIs.comment": "Hour of the day",
   "_EiRMD4.comment": "Description for creating an externally authenticated connection.",
   "_EjXdAm.comment": "OAuth Password Label Display Name",
@@ -1047,6 +1063,7 @@
   "_GCjJnP.comment": "Invalid Json",
   "_GD3m4X.comment": "Function display radio group option for expanded",
   "_GDUGlm.comment": "Authority Placeholder Text",
+  "_GEB1on.comment": "Error message for invalid minute array",
   "_GIUSQs.comment": "Filter by data type",
   "_GLd3MU.comment": "Required object parameter to find for the contains function",
   "_GXXLuT.comment": "Error validation message",
@@ -1151,6 +1168,7 @@
   "_M8Aqm4.comment": "Optional string parameter to determine specific actions inside top-level actions",
   "_M9mzP6.comment": "Required number parameter to be summed in add function",
   "_MCQODe.comment": "description of secure outputs setting",
+  "_MCzWDc.comment": "Recurrence preview title",
   "_MDbmMw.comment": "Required collection parameters to check intersection function on",
   "_MKTdNk.comment": "Required dataURI string parameter to be converted using dataUriToBinary function",
   "_MLCQzX.comment": "Managed Identity Label Display Name",
@@ -1210,6 +1228,7 @@
   "_PE1tsI.comment": "No utputs text",
   "_PF87Ew.comment": "This is a status message to be shown in a monitoring view",
   "_PKMkb/.comment": "Required number parameter to be summed in add function",
+  "_PNk3n4.comment": "Recurrence schedule description on days of week at times",
   "_PORNMZ.comment": "Inputs text",
   "_PP63jY.comment": "This is a label to access the overflowed panels",
   "_PQOiAc.comment": "An accessible label for collapse toggle icon",
@@ -1285,6 +1304,7 @@
   "_TUaunO.comment": "error displayed when no value is entered",
   "_TX4Kdr.comment": "aria label description for create button",
   "_TY4HzZ.comment": "Description for the schema section",
+  "_TZh8nV.comment": "Recurrence schedule description on days of week",
   "_Tayrub.comment": "Authentication type",
   "_Tb2QLA.comment": "Label text for retry client request ID",
   "_TgcgXE.comment": "Label For Tags in About Panel",
@@ -1298,6 +1318,7 @@
   "_U1NiVg.comment": "Timezone value ",
   "_U3guPp.comment": "Label for the checkbox to group results by connector",
   "_U3iWVd.comment": "Label for description of custom range Function",
+  "_U4zovj.comment": "Recurrence schedule description on days of week at times",
   "_U56j9a.comment": "Timezone value ",
   "_U7yRwM.comment": "The title of the validation error field in the static result parseJson action",
   "_UCNM4L.comment": "Description for Workflow Parameters Part 2",
@@ -1308,6 +1329,7 @@
   "_UYRIS/.comment": "Title for file name parameter",
   "_UZiXVh.comment": "The title of the output field in the static result http action",
   "_Ufv5m9.comment": "Body text for an unconnected required schema card",
+  "_Umpr3z.comment": "Recurrence schedule description every interval weeks",
   "_UnrrzF.comment": "Label to inform the below schema name is for source schema",
   "_Ur+wph.comment": "Label for delete button",
   "_UtyRCH.comment": "Placeholder text for connection name input",
@@ -1541,6 +1563,7 @@
   "_i1Tufp.comment": "Label for input data option choice group",
   "_i1cwra.comment": "Button text for redo the last undone action",
   "_i4C4aB.comment": "title for networking setting section",
+  "_i4Om5O.comment": "Error message for invalid integer array",
   "_iBlvhu.comment": "Comment text",
   "_iCSHJG.comment": "Label for description of custom toUpper Function",
   "_iEy9pT.comment": "Token picker mode to insert dynamic content",
@@ -1758,6 +1781,7 @@
   "_tP+5fA.comment": "Timezone value ",
   "_tUYXRA.comment": "Placeholder for Start time",
   "_tUlRzr.comment": "Authentication type",
+  "_tWV2mC.comment": "Recurrence schedule description at times",
   "_tZj2Xn.comment": "Label for description of custom greater Function",
   "_taPCmY.comment": "Required integer parameter to subtract hours from time",
   "_td5//c.comment": "Collapse tree node",
@@ -1806,6 +1830,7 @@
   "_vrYqUF.comment": "Label for button to allow user to create custom value in combobox",
   "_vvSHR8.comment": "Change context of the canvas to view that element's children",
   "_vwH/XV.comment": "Create Parameter Text",
+  "_vxOc/M.comment": "Error message for duplicate integer array",
   "_vz2gZC.comment": "Header text for workflow properties",
   "_w0pI5M.comment": "Text to show when there are no browse results with the given filters",
   "_w16qh+.comment": "Display name for queries in outputs",
@@ -2018,6 +2043,7 @@
   "i1Tufp": "Provide input data to test the map with",
   "i1cwra": "Redo",
   "i4C4aB": "Networking",
+  "i4Om5O": "This contains an invalid value",
   "iBlvhu": "Comment",
   "iCSHJG": "Converts a string to uppercase using the casing rules of the invariant culture",
   "iEy9pT": "Dynamic content",
@@ -2235,6 +2261,7 @@
   "tP+5fA": "(UTC+06:00) Novosibirsk",
   "tUYXRA": "Example: 2017-03-24T15:00:00Z",
   "tUlRzr": "Basic",
+  "tWV2mC": "at {times} every hour",
   "tZj2Xn": "Returns true if the first argument is greater than the second",
   "taPCmY": "Required. The number of hours to add. Can be negative to subtract hours.",
   "td5//c": "Collapse tree node",
@@ -2283,6 +2310,7 @@
   "vrYqUF": "Enter custom value",
   "vvSHR8": "Navigate to element and view children",
   "vwH/XV": "Create parameter",
+  "vxOc/M": "This contains a duplicate value",
   "vz2gZC": "Workflow Properties",
   "w0pI5M": "No results found for the specified filters",
   "w16qh+": "Queries",
