Right click add all children * Fix canvas size tied to output only * Fix another zombie node bug

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -86,6 +86,7 @@
   "1uGBLP": "5",
   "1zgFh1": "Dismiss",
   "1zmMYu": "(UTC-04:00) Caracas",
+  "20oqsp": "Add children (recursive)",
   "23fENy": "Returns a binary representation of a base 64 encoded string",
   "23szE+": "Required. The value to convert to data URI.",
   "23uZn1": "Global search",
@@ -684,6 +685,7 @@
   "Y0H9aX": "More Info",
   "Y7yyKD": "Invalid expression type '{type}'.",
   "Y9kBz5": "Returns a binary representation of a data URI",
+  "YCFhzp": "Add children",
   "YHsAKl": "Operation note",
   "YIBDSH": "{days}d",
   "YJJ+gQ": "String",
@@ -799,6 +801,7 @@
   "_1uGBLP.comment": "Hour of the day",
   "_1zgFh1.comment": "Label for dismiss button in panel header",
   "_1zmMYu.comment": "Timezone value ",
+  "_20oqsp.comment": "Add the current node and its children to the map",
   "_23fENy.comment": "Label for description of custom base64ToBinary Function",
   "_23szE+.comment": "Required string parameter to be converted using dataUri function",
   "_23uZn1.comment": "Button text for global search",
@@ -1397,6 +1400,7 @@
   "_Y0H9aX.comment": "This is shown as an aria label on button as well as the tooltip that is shown after clicking the button",
   "_Y7yyKD.comment": "Error message on invalid expression type during building",
   "_Y9kBz5.comment": "Label for description of custom dataUriToBinary Function",
+  "_YCFhzp.comment": "Add the current node and its children to the map",
   "_YHsAKl.comment": "Label For Operation Description in About Panel",
   "_YIBDSH.comment": "This is a period in time in days. {days} is replaced by the number and d is an abbreviation of days",
   "_YJJ+gQ.comment": "This is an option in a dropdown where users can select type String for their parameter.",
