Finished service principal work

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -155,6 +155,7 @@
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
   "5+MuPz": "Enter a valid double.",
+  "535FGR": "Use a service principal to connect using application permissions",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
   "5SAQOb": "Authority",
@@ -219,6 +220,7 @@
   "8ubEPi": "Request Options",
   "8wlfdo": "Suppress workflow headers on response",
   "8wr0zO": "Adds an integer number of days to a string timestamp passed in",
+  "8yjjTX": "Connect via Service Principal",
   "9/UeTh": "Returns a single array or object that has common elements between arrays or objects passed in",
   "9/vdrb": "(UTC+07:00) Hovd",
   "90HY0L": "Insert a new step between {parent} and {child}",
@@ -871,6 +873,7 @@
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
   "_5+MuPz.comment": "Error validation message",
+  "_535FGR.comment": "Tooltip for service principal connection checkbox",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5SAQOb.comment": "Authority Label Display Name",
@@ -935,6 +938,7 @@
   "_8ubEPi.comment": "title for request options setting",
   "_8wlfdo.comment": "title for workflow headers on response setting",
   "_8wr0zO.comment": "Label for description of custom addDays Function",
+  "_8yjjTX.comment": "Checkbox label for using an Service Pricipal connection",
   "_9/UeTh.comment": "Label for description of custom intersection Function",
   "_9/vdrb.comment": "Timezone value ",
   "_90HY0L.comment": "Tooltip for the button to add a new step (action or branch)",
@@ -1591,6 +1595,7 @@
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
   "_isnFBi.comment": "Message on switching levels with nodes/mappings not connected to a target schema node",
   "_iy8rNf.comment": "Button text for running test",
+  "_izS5yQ.comment": "Learn more link text",
   "_j1VU25.comment": "Timezone value ",
   "_j2MU0b.comment": "Label for description of custom removeProperty Function",
   "_j39557.comment": "Label for description of custom variables Function",
@@ -2072,6 +2077,7 @@
   "iql+jn": "{seconds}s",
   "isnFBi": "Elements and mappings not connected to a target element are removed.",
   "iy8rNf": "Test",
+  "izS5yQ": "Learn more",
   "j1VU25": "(UTC+14:00) Kiritimati Island",
   "j2MU0b": "Returns an object with a property removed",
   "j39557": "Returns the value of the variable specified.",
