Slight tooltip link modifications

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -155,7 +155,6 @@
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
   "5+MuPz": "Enter a valid double.",
-  "535FGR": "Use a service principal to connect using application permissions",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5MWmiO": "Line Number",
   "5SAQOb": "Authority",
@@ -600,6 +599,7 @@
   "TZh8nV": "on {weekDays} {frequencyDesc}",
   "Tayrub": "Raw",
   "Tb2QLA": "Client request ID",
+  "TeRxLv": "Use a service principal to connect using application permissions.",
   "TgcgXE": "Tags",
   "Tiqnir": "Custom",
   "Tmr/9e": "Invalid parameters",
@@ -873,7 +873,6 @@
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
   "_5+MuPz.comment": "Error validation message",
-  "_535FGR.comment": "Tooltip for service principal connection checkbox",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5MWmiO.comment": "The title of the line number field in the static result parseJson action",
   "_5SAQOb.comment": "Authority Label Display Name",
@@ -1318,6 +1317,7 @@
   "_TZh8nV.comment": "Recurrence schedule description on days of week",
   "_Tayrub.comment": "Authentication type",
   "_Tb2QLA.comment": "Label text for retry client request ID",
+  "_TeRxLv.comment": "Tooltip for service principal connection checkbox",
   "_TgcgXE.comment": "Label For Tags in About Panel",
   "_Tiqnir.comment": "Option text for table column type in table editor",
   "_Tmr/9e.comment": "Text to explain that there are invalid parameters for this node",
