--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -219,6 +219,7 @@
   "8ubEPi": "Request Options",
   "8wlfdo": "Suppress workflow headers on response",
   "8wr0zO": "Adds an integer number of days to a string timestamp passed in",
+  "8yjjTX": "Connect via Service Principal",
   "9/UeTh": "Returns a single array or object that has common elements between arrays or objects passed in",
   "9/vdrb": "(UTC+07:00) Hovd",
   "90HY0L": "Insert a new step between {parent} and {child}",
@@ -598,6 +599,7 @@
   "TZh8nV": "on {weekDays} {frequencyDesc}",
   "Tayrub": "Raw",
   "Tb2QLA": "Client request ID",
+  "TeRxLv": "Use a service principal to connect using application permissions.",
   "TgcgXE": "Tags",
   "Tiqnir": "Custom",
   "Tmr/9e": "Invalid parameters",
@@ -935,6 +937,7 @@
   "_8ubEPi.comment": "title for request options setting",
   "_8wlfdo.comment": "title for workflow headers on response setting",
   "_8wr0zO.comment": "Label for description of custom addDays Function",
+  "_8yjjTX.comment": "Checkbox label for using an Service Pricipal connection",
   "_9/UeTh.comment": "Label for description of custom intersection Function",
   "_9/vdrb.comment": "Timezone value ",
   "_90HY0L.comment": "Tooltip for the button to add a new step (action or branch)",
@@ -1314,6 +1317,7 @@
   "_TZh8nV.comment": "Recurrence schedule description on days of week",
   "_Tayrub.comment": "Authentication type",
   "_Tb2QLA.comment": "Label text for retry client request ID",
+  "_TeRxLv.comment": "Tooltip for service principal connection checkbox",
   "_TgcgXE.comment": "Label For Tags in About Panel",
   "_Tiqnir.comment": "Option text for table column type in table editor",
   "_Tmr/9e.comment": "Text to explain that there are invalid parameters for this node",
@@ -1591,6 +1595,7 @@
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
   "_isnFBi.comment": "Message on switching levels with nodes/mappings not connected to a target schema node",
   "_iy8rNf.comment": "Button text for running test",
+  "_izS5yQ.comment": "Learn more link text",
   "_j1VU25.comment": "Timezone value ",
   "_j2MU0b.comment": "Label for description of custom removeProperty Function",
   "_j39557.comment": "Label for description of custom variables Function",
@@ -2072,6 +2077,7 @@
   "iql+jn": "{seconds}s",
   "isnFBi": "Elements and mappings not connected to a target element are removed.",
   "iy8rNf": "Test",
+  "izS5yQ": "Learn more",
   "j1VU25": "(UTC+14:00) Kiritimati Island",
   "j2MU0b": "Returns an object with a property removed",
   "j39557": "Returns the value of the variable specified.",
